.provarCaches/00D5f000005vwGkEAI/objects/rstkf__trialbalcalc__c.object
<CustomObject>
    <description>trialbalcalc__c</description>
    <fields>
        <fullName>rstkf__trialbalcalc_agingdate__c</fullName>
        <label>Aging Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__trialbalcalc_arinvdue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>trialbalcalc_arinvdue__c</description>
        <label>Receivable Transaction Scheduled Payment</label>
        <referenceTo>rstkf__arinvdue__c</referenceTo>
        <relationshipLabel>Trial Balance Report Calculations</relationshipLabel>
        <relationshipName>Trial_Balance_Report_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__trialbalcalc_col0__c</fullName>
        <label>Report Column 0</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__trialbalcalc_col10__c</fullName>
        <label>Report Column 10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__trialbalcalc_col11__c</fullName>
        <label>Report Column 11</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__trialbalcalc_cutoffdate__c</fullName>
        <label>Cut Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__trialbalcalc_extendedspreadsheet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extended Spread Sheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__trialbalcalc_formula_vendorcusttitle__c</fullName>
        <formula>rstkf__trialbalcalc_arinvdue__r.rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_socustcmpno__r.rstkf__socustcmpno_socust__r.rstk__socust_custno__c &amp; &apos; - &apos; &amp;
rstkf__trialbalcalc_arinvdue__r.rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_socustcmpno__r.rstkf__socustcmpno_socust__r.rstk__socust_sf_account_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Vendor or Customer Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__trialbalcalc_glacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Control Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Trial Balance Report Calculations</relationshipLabel>
        <relationshipName>trialbalcalcs01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__trialbalcalc_glacctname__c</fullName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__trialbalcalc_glacctnum__c</fullName>
        <label>Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__trialbalcalc_glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Trial Balance Report Calculations</relationshipLabel>
        <relationshipName>trialbalcalcs01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__trialbalcalc_glusr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial User</label>
        <referenceTo>rstkf__glusr__c</referenceTo>
        <relationshipLabel>Trial Balance Report Calculations</relationshipLabel>
        <relationshipName>trialbalcalcs01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__trialbalcalc_origin__c</fullName>
        <label>Origin</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__trialbalcalc_printorexport__c</fullName>
        <label>Print or Export Report</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Export</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__trialbalcalc_rectype__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Header</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Total</fullName>
                </value>
                <value>
                    <fullName>Account Total</fullName>
                </value>
                <value>
                    <fullName>Report Total</fullName>
                </value>
                <value>
                    <fullName>Title</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__trialbalcalc_reportcols__c</fullName>
        <label>Number of Report Columns</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__trialbalcalc_reportcount__c</fullName>
        <label>Report Count</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__trialbalcalc_stylecol0__c</fullName>
        <label>Style Column 0</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__trialbalcalc_stylecol10__c</fullName>
        <label>Style Column 10</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__trialbalcalc_stylecol11__c</fullName>
        <label>Style Column 11</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__trialbalcalc_vendorcustnum__c</fullName>
        <label>Vendor or Customer Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__trialbalcalc_vendorcusttitle__c</fullName>
        <label>Vendor or Customer Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__trialbalcalcs_processlog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>trialbalcalcs_processlog__c</description>
        <label>Processlog</label>
        <referenceTo>rstkf__processlogf__c</referenceTo>
        <relationshipLabel>Trial Balance Report Calculations</relationshipLabel>
        <relationshipName>processlogs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__trialbalcalcs_recnum__c</fullName>
        <label>Record Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Trial Balance Report Calculation</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trial Balance Report Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>